# bigbed-jaccard

./: .gitignore  Cargo.toml  README.md  bigbed_jaccard_many_hashes.py  bigbed_jaccard_one_hash.py  files.txt  pybigbed.py
data/: file_report_2020_4_15_2h_50m.tsv  file_report_2020_4_15_2h_50m_expanded_cloud.tsv
notebooks/: multidimensional_scaling.ipynb
scripts/: get_urls_from_report.py
src/: bed.rs  bottom_k.rs  hash.rs  lib.rs  lsh.rs  main.rs  oph.rs  reader.rs  request.rs
