[package]
name = "bigbed"
version = "0.1.0"
authors = ["Paul Sud <paulsud@stanford.edu>"]
edition = "2018"

[lib]
name = "bigbed_jaccard"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
bigtools = "0.1.2"
rayon = "1.3.0"
