[package]
name = "bigbed-jaccard"
version = "0.1.0"
authors = ["Paul Sud <paulsud@stanford.edu>"]
edition = "2018"

[lib]
name = "bigbed_jaccard"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.11", features = ["macros"] }
itertools = "0.8.2"
bigtools = "0.1.2"
rayon = "1.3.0"
reqwest = "0.10.0"
tempfile = "3"

[dev-dependencies]
float-cmp = "0.6.0"
