[package]
name = "bigbed-jaccard"
version = "0.1.0"
authors = ["Paul Sud <paulsud@stanford.edu>"]
edition = "2018"

[lib]
name = "bigbed_jaccard"
path = "src/lib.rs"

[[bin]]
name = "bigbed-jaccard-similarity-matrix"
path = "src/bin/bigbed_jaccard_similarity_matrix.rs"

[[bin]]
name = "bigbed-oph-lsh"
path = "src/bin/bigbed_oph_lsh.rs"

[dependencies]
bigtools = "0.1.2"
csv = "1.1"
itertools = "0.8.2"
rand = "0.7.3"
reqwest = "0.10.0"
rayon = "1.3.0"
serde = { version = "1", features = ["derive"] }
structopt = "0.3.7"
tempfile = "3"
tokio = { version = "0.2.11", features = ["macros"] }

[dev-dependencies]
float-cmp = "0.6.0"
